--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,18 +1,18 @@
 <div id="about">
 	<article class="panel">
 		<h1>About</h1>
-		<p>I specialise in clean, accessible, responsive and optimised code using HTML 5, Sass, and Javascript for websites and webapps. I have experience of libraries such as Foundation, Bootstrap, jQuery and frameworks such as AngularJS.</p>
+		<p>I specialize in clean, accessible, responsive and optimised code using HTML 5, Sass, and Javascript for websites and webapps. I have experience of libraries such as Foundation, Bootstrap, jQuery and frameworks such as AngularJS.</p>
 
 		<h2>About me</h2>
 		<p>I'm a web developer originally from Layton, Utah. I graduated from DevMountain coding bootcamp.</p>
-		<p>I enjoy really any outdoors activty whether it be hiking, camping, snowboarding, fishing, boating or backpacking. I also find great enjoyment in writing music, reading, coding, and making beef jerky.</p>
+		<p>I enjoy really any outdoors activity whether it be hiking, camping, snowboarding, fishing, boating or backpacking. I also find great enjoyment in writing music, reading, coding, and making beef jerky.</p>
 		<!-- <p>I keep a <a href="/blog">blog</a> of news and thoughts, a mix of code, music, technology and travel logs.</p> -->
 
 
 		<h2>My skills</h2>
-		<p>The key to optimised code is the understanding of how it all works.</p>
+		<p>The key to optimized code is the understanding of how it all works.</p>
 		<p>Not only should a page look great to the user, but so should the code lying beneath. Clean and good looking code makes a page run faster, be helpful to search engines, and also to be accessible for people with physical limitations.</p>
-		<p>I have a wide set of skills in technology, including web and audio engineering but I specialise in precision HTML, CSS and Javascript.</p>
+		<p>I have a wide set of skills in technology, including web and audio engineering but I specialize in precision HTML, CSS and Javascript.</p>
 		<p>My skills include: </p>
 				<ul>
 					<img src="http://www.jotechafrica.com/learn/images/css3.png" alt="css logo"/>
